--- a/Attack RC4/templates/login.html
+++ b/Attack RC4/templates/login.html
@@ -14,5 +14,10 @@
         
         <button type="submit">Đăng nhập</button>
     </form>
+    <div
+            style="width: 300px; height: 200px; background-image: url('/static/z6547873563637_01bd9c320b07fae25b7ed7fdde54510d.jpg'); background-size: cover; background-position: center;">
+    </div>
+
+
 </body>
 </html>
